# CrawlAgentcore

./: .bedrock_agentcore.yaml  .dockerignore  .gitignore  Dockerfile  README.md  architecture.drawio  crawler_cli.py  movies.json  observe.py  pyproject.toml  requirements.txt
deploy/: cfn_handler.py  cloudformation.yaml  deploy.sh  package.sh
doc/: architecture.drawio  presentation.html  test_report.md
skills/api-crawl/: SKILL.md
skills/api-crawl/examples/: sample-output.json
skills/default-crawl/: SKILL.md
skills/default-crawl/examples/: sample-output.json
skills/docs-crawl/: SKILL.md  reference.md
skills/docs-crawl/examples/: sample-output.json
skills/ecommerce-crawl/: SKILL.md  reference.md
skills/ecommerce-crawl/examples/: sample-output.json
skills/news-crawl/: SKILL.md  reference.md
skills/news-crawl/examples/: sample-output.json
skills/social-crawl/: SKILL.md  reference.md
skills/social-crawl/examples/: sample-output.json
src/: __init__.py  browser_tool.py  main.py  skills.py
tests/: run_test_cases.py  test_agent_wiring.py  test_browser_tool.py  test_cfn_handler.py  test_cloud_e2e.py  test_customer_inputs.py  test_encoding_advanced.py  test_invoke_flow.py  test_skills.py
