[project]
name = "crawler-agent"
version = "0.1.0"
description = "AgentCore agent that generates and executes crawler code via Code Interpreter"
requires-python = ">=3.10"
dependencies = [
    "strands-agents>=0.1.0",
    "strands-agents-tools>=0.1.0",
    "bedrock-agentcore>=0.1.0",
    "boto3>=1.35.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
